--- a/style.css
+++ b/style.css
@@ -1,3 +1,20 @@
 body {
   margin: 0;
 }
+
+#cr-stage {
+  margin: 0 auto;
+}
+
+.Plant {
+  background: rgba(0, 255, 0, 0.5);
+  text-align: center;
+}
+
+.Plant.Collided {
+  background: rgba(255, 255, 255, 0.5);
+}
+
+.Cursor {
+  background: rgba(255, 0, 0, 0.5);
+}
